--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,27 @@ h1 {
 #grand-child {
   background-color: #b1b1b1;
 }
+
+.form-container {
+  width: 100%;
+  margin-block: 1rem;
+}
+#form {
+  display: flex;
+  flex-direction: row;
+  align-items: strech;
+}
+#form button {
+  width: 30%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+#form input {
+  width: 70%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
