--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h1 {
   flex-direction: row;
   align-items: strech;
 }
-#form button {
+button {
   width: 30%;
   padding: 10px;
   border: 1px solid #ccc;
